syntax = "proto3";

package com.virtuslab.vss.proto.cats;

// Base

message HashPasswordMessage {
  string hashType = 1;
  string password = 2;
}

message HashedPasswordMessage {
  string hashType = 1;
  string password = 2;
  string hash = 3;
}

service HashPasswordService {
  rpc HashPassword (HashPasswordMessage) returns (HashedPasswordMessage) {}
}

message CheckPwnedRequest {
  string email = 1;
}

message CheckPwnedResponse {
  string email = 1;
  int32 pwned_times = 2;
}

service PwnedService {
  rpc CheckPwned (CheckPwnedRequest) returns (CheckPwnedResponse) {}
}

// Stats

message EmptyRequest {}

message EventResponse {
  string eventType = 1;
  optional string password = 2;
  optional string hashType = 3;
  optional string email = 4;
}

message AllEvents {
  repeated EventResponse events = 1;
}

service StatsService {
  rpc GetAllEvents (EmptyRequest) returns (AllEvents) {}
}
