syntax = "proto3";

package com.virtuslab.vss.proto.zio;

// Base

service HashPasswordService {
  rpc HashPassword (HashPasswordRequest) returns (HashPasswordResponse) {}
}


message HashPasswordRequest {
  string hashType = 1;
  string password = 2;
}


message HashPasswordResponse {
  string hashType = 1;
  string password = 2;
  string hash = 3;
}



service PwnedService {
  rpc CheckPwned (CheckPwnedRequest) returns (CheckPwnedResponse) {}
}

message CheckPwnedRequest {
  string passwordHash = 1;
}

message CheckPwnedResponse {
  string passwordHash = 1;
  bool pwned = 2;
}


// Stats

service StatsService {
  rpc ListEvents (ListEventsRequest) returns (ListEventsReponse) {}
}

message ListEventsRequest {}

message Event {
  string eventType = 1;
  optional string password = 2;
  optional string hashType = 3;
  optional string passwordHash = 4;
}

message ListEventsReponse {
  repeated Event events = 1;
}


